# MoDorado

./: .gitignore  LICENSE  README.md  filter_fulllen.py  filter_parasail.py  parse_dorado.py  pyproject.toml  signal_tools.py
data/: reference.fasta.fai
output/: trna2mods.pckl
src/MoDorado/: filter_parasail.py  main.py  signal_tools.py
src/modorado/: dist_compare.py  filter_parasail.py  main.py  parse_dorado.py  plot_trna.py  signal_tools.py  utils.py
tests/data/: 20241031_data_shifted_mods.xlsx  SI_table1.xlsx  kl_elp6028_mincov100.tsv  reference.aln.fa  reference.aln.fa.fai  reference.fasta
tests/output/: kl_symmetric_mincov100.tsv
