[project]
name = "modorado"
version = "0.1.0"
description = "Off-label modification detection with pre-trained models in nanopore direct RNA sequencing"
authors = [
    {name = "Wang Liu-Wei",email = "liuwei.wang@fu-berlin.de"}
]
license = {text = "MIT"}
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pod5 = "^0.3.12"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
matplotlib = "^3.9.0"
pysam = "^0.22.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"

[project.urls]
repository = "https://github.com/KleistLab/modorado"

[tool.poetry.scripts]
modorado = 'modorado.main:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
